# django-goals

./: .coverage  .gitignore  LICENSE  README.md  cr-summary.txt  cr.sh  cr.toml  example.env  killer-tasks.md  manage.py  no-payload-in-tasks.md  pyproject.toml  reasonable-db-size.md
.github/: copilot-config.yml
.github/actions/python/: action.yml
.github/workflows/: copilot-setup-steps.yml  copilot-setup-test.yml  cosmic-ray.yml  pypi.yml  pytest.yml
django_goals/: admin.py  admin_tests.py  apps.py  blocking_worker.py  busy_worker.py  busy_worker_tests.py  conftest.py  factories.py  limits.py  memory.py  models.py  models_tests.py  notifications.py  notifications_tests.py  pickups.py  sentry.py  types.py  utils.py  uuid7.py  uuid7_tests.py  worker_tests.py
django_goals/migrations/: 0001_initial.py  0002_goalprogress_message.py  0003_remove_goal_goals_waiting_for_worker_idx_and_more.py  0004_goal_waiting_for_count.py  0005_goal_goals_waiting_for_precond_idx.py  0006_goal_waiting_for_failed_count_and_more.py  0007_goal_goals_achieved_idx.py  0008_remove_goal_goals_waiting_for_precond_idx_and_more.py  0009_goal_waiting_for_not_achieved_count.py  0010_remove_goal_goals_waiting_for_failed_idx_and_more.py  0011_goalpickup.py
example_app/: merge_sort.py  merge_sort_tests.py  models.py  partition_sort.py  partition_sort_tests.py  proceed_on_errors.py  proceed_on_errors_tests.py
example_app/migrations/: 0001_initial.py  0002_mergesort.py  0003_partitionsort.py  0004_errorsbatch.py  0005_alter_partitionsort_sorted_numbers.py
example_project/: asgi.py  settings.py  urls.py  wsgi.py
(+12 files in other folders)
